WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145476
WebResourceLoadDelegatePrivate.h cannot be imported standalone (missing WebNSInteger type)
https://bugs.webkit.org/show_bug.cgi?id=145476
Summary
WebResourceLoadDelegatePrivate.h cannot be imported standalone (missing WebNS...
Anders Carlsson
Reported
2015-05-29 15:25:30 PDT
WebResourceLoadDelegatePrivate.h cannot be imported standalone (missing WebNSInteger type)
Attachments
Patch
(2.90 KB, patch)
2015-05-29 15:26 PDT
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2015-05-29 15:26:09 PDT
Created
attachment 253925
[details]
Patch
Anders Carlsson
Comment 2
2015-05-29 15:33:24 PDT
Committed
r185010
: <
http://trac.webkit.org/changeset/185010
>
Darin Adler
Comment 3
2015-05-29 15:36:27 PDT
So the NSInteger typedef comes from the <TargetAvailability.h> header? Seriously?
Anders Carlsson
Comment 4
2015-05-29 15:44:46 PDT
(In reply to
comment #3
)
> So the NSInteger typedef comes from the <TargetAvailability.h> header? > Seriously?
No, there is no WebNSInteger typedef. The reason this builds is that nobody ends up defining TARGET_OS_IPHONE (It's actually quite possible that nobody even imports WebResourceLoadDelegatePrivate.h at all)
Darin Adler
Comment 5
2015-05-30 16:11:10 PDT
I was asking about NSInteger, not WebNSInteger, but I guess the include is for TARGET_OS_IPHONE?
Anders Carlsson
Comment 6
2015-06-01 10:14:18 PDT
(In reply to
comment #5
)
> I was asking about NSInteger, not WebNSInteger, but I guess the include is > for TARGET_OS_IPHONE?
Ah, yes it is. (I didn't want to mess with the includes more than necessary).
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug