WebResourceLoadDelegatePrivate.h cannot be imported standalone (missing WebNSInteger type) https://bugs.webkit.org/show_bug.cgi?id=145476 rdar://problem/21162400

Reviewed by Dan Bernstein.

Change WebNSInteger to NSInteger.

* WebView/WebResourceLoadDelegatePrivate.h:

Canonical link: https://commits.webkit.org/163510@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185010 268f45cc-cd09-0410-ab3c-d52691b4dbfc